--- a/web/css/site.css
+++ b/web/css/site.css
@@ -19,7 +19,7 @@ body {
 }
 
 .footer {
-  height: 80px;
+  min-height: 80px;
   background-color: #f5f5f5;
   border-top: 1px solid #ddd;
   padding-top: 20px;
